--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "proxiblue/elastic",
   "description": "Adjustments to how smile elastic search indexes",
   "type": "magento2-module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "autoload": {
     "files": [
       "registration.php"
@@ -10,5 +10,8 @@
     "psr-4": {
       "ProxiBlue\\Elastic\\": ""
     }
+  },
+  "require": {
+    "smile/elasticsuite": "2.9.*",
   }
 }
